creating basic assets acount and account style

--- a/AccountingApp/src/app/pages/accounts/assets/assets.component.html
+++ b/AccountingApp/src/app/pages/accounts/assets/assets.component.html
@@ -1,14 +1,14 @@
-<div class="info">
-    <h1>Assets</h1>
+<div class="info account-container">
+    <h1 class="info title">Assets 1</h1>
 
-    <div class="account-container">
+    <div class="scale-container">
         <section class="info">
-            <h2>Debit</h2>
+            <h2 class="title green-text">Debit</h2>
     
         </section>
     
         <section class="info">
-            <h2>Credit</h2>
+            <h2 class="title red-text">Credit</h2>
             
         </section>
     </div>
