getting from server

--- a/AccountingApp/src/app/pages/accounts/assets/assets.component.html
+++ b/AccountingApp/src/app/pages/accounts/assets/assets.component.html
@@ -9,7 +9,7 @@
     
         <section class="info">
             <h2 class="title red-text">Credit</h2>
-            <app-transction></app-transction>
+            <app-transction *ngFor="let transaction of transactions"></app-transction>
         </section>
     </div>
 </div>
