adding right transaction to right row

--- a/AccountingApp/src/app/pages/accounts/transction/transction.component.html
+++ b/AccountingApp/src/app/pages/accounts/transction/transction.component.html
@@ -1,4 +1,4 @@
 <div class="scale-container">
-    <p class="title happening">Party</p>
-    <p class="title amount">500</p>
+    <p class="title happening">{{transactionData.happening}}</p>
+    <p class="title amount">{{transactionData.amount}}</p>
 </div>
