--- a/AccountingApp/src/app/pages/accounts/assets/assets.component.html
+++ b/AccountingApp/src/app/pages/accounts/assets/assets.component.html
@@ -4,12 +4,18 @@
     <div class="scale-container">
         <section class="info">
             <h2 class="title green-text">Debit</h2>
-    
+            <app-transction 
+            *ngFor="let transaction of debit"
+            [transactionData]="transaction"
+            ></app-transction>
         </section>
     
         <section class="info">
             <h2 class="title red-text">Credit</h2>
-            <app-transction *ngFor="let transaction of transactions"></app-transction>
+            <app-transction 
+            *ngFor="let transaction of credit"
+            [transactionData]="transaction"
+            ></app-transction>
         </section>
     </div>
 </div>
