added an unnececary button

--- a/AccountingApp/src/app/pages/accounts/assets/assets.component.html
+++ b/AccountingApp/src/app/pages/accounts/assets/assets.component.html
@@ -1,5 +1,8 @@
 <div class="info account-container">
-    <h1 class="info title">Assets 1</h1>
+    <div class="scale-container info">
+        <h1 class="title">Assets 1</h1>
+        <app-button></app-button>
+    </div>
 
     <div class="scale-container">
         <section class="info">
