adding transaction form

--- a/AccountingApp/src/app/pages/accounts/add-transaction/add-transaction.component.html
+++ b/AccountingApp/src/app/pages/accounts/add-transaction/add-transaction.component.html
@@ -5,5 +5,8 @@
     <label for="amount">Amount</label>
     <input type="number" name="amount" [(ngModel)]="amount">
 
-    <input type="submit">
+    <div>
+        <input type="submit">
+        <p>{{date}}</p>
+    </div>
 </form>
