--- a/AccountingApp/src/app/pages/accounts/assets/assets.component.html
+++ b/AccountingApp/src/app/pages/accounts/assets/assets.component.html
@@ -10,7 +10,8 @@
 
     <app-add-transaction 
         *ngIf="showAddForm"
-        [isRR]=false>
+        [isRR]=false
+        (addedTransaction)="onAddedTransaction($event)">
     </app-add-transaction>
 
     <div class="scale-container">
