--- a/AccountingApp/src/app/pages/accounts/transction/transction.component.css
+++ b/AccountingApp/src/app/pages/accounts/transction/transction.component.css
@@ -2,7 +2,16 @@
     border-top: 2px solid rgb(53, 43, 125);
     flex: 1;
 }
-
 .amount{
     border-top: 2px solid rgb(53, 43, 125);
+}
+form{
+    border-top: 2px solid rgb(53, 43, 125);
+    display: flex;
+    flex-direction: column;
+    padding: 4px;
+}
+input[type="submit"]{
+    background-color: black;
+    color: aliceblue;
 }
