--- a/AccountingApp/src/app/pages/accounts/add-transaction/add-transaction.component.css
+++ b/AccountingApp/src/app/pages/accounts/add-transaction/add-transaction.component.css
@@ -1,6 +1,8 @@
 form{
     display: flex;
     flex-direction: column;
+    border: 1px solid black;
+    padding: 5px;
 }
 input[type="submit"]{
     background-color: black;
