--- a/AccountingApp/src/app/pages/accounts/transction/transction.component.html
+++ b/AccountingApp/src/app/pages/accounts/transction/transction.component.html
@@ -21,7 +21,7 @@
 
         <div>
             <input type="submit" value="Update">
-            <button (click)="deleteTransaction()">Delete</button>
+            <button type="button" (click)="deleteTransaction()">Delete</button>
         </div>
         <p>{{transactionData.date}}</p>
     </form>
