using an effect to get data through a store

--- a/AccountingApp/src/app/pages/accounts/debts/debts.component.html
+++ b/AccountingApp/src/app/pages/accounts/debts/debts.component.html
@@ -1,3 +1,6 @@
+
+<p *ngFor="let event of transactions$ | async">{{event.happening}}</p>
+
 <div class="info account-container">
 
     <div class="scale-container info">
