--- a/AccountingApp/src/app/pages/accounts/debts/debts.component.html
+++ b/AccountingApp/src/app/pages/accounts/debts/debts.component.html
@@ -1,6 +1,3 @@
-
-<p *ngFor="let event of transactions$ | async">{{event.happening}}</p>
-
 <div class="info account-container">
 
     <div class="scale-container info">
@@ -22,7 +19,7 @@
         <section class="info">
             <h2 class="title red-text">Debit -</h2>
             <app-transction 
-            *ngFor="let transaction of debit"
+            *ngFor="let transaction of debit$ | async"
             [transactionData]="transaction"
             (deathrowTransaction)="onTransactionDeletion($event)"
             ></app-transction>
@@ -32,7 +29,7 @@
             <h2 class="title green-text">Credit +</h2>
 
             <app-transction 
-            *ngFor="let transaction of credit"
+            *ngFor="let transaction of credit$ | async"
             [transactionData]="transaction"
             (deathrowTransaction)="onTransactionDeletion($event)"
             ></app-transction>
