--- a/AccountingApp/src/app/pages/accounts/transction/transction.component.html
+++ b/AccountingApp/src/app/pages/accounts/transction/transction.component.html
@@ -23,6 +23,8 @@
             <input type="submit" value="Update">
             <button type="button" (click)="deleteTransaction()">Delete</button>
         </div>
-        <p>{{transactionData.date}}</p>
     </form>
+
+    <p class="title">{{transactionData.date}}</p>
+
 </div>
