making some more

--- a/AccountingApp/src/app/pages/accounts/accounts/accounts.component.html
+++ b/AccountingApp/src/app/pages/accounts/accounts/accounts.component.html
@@ -1,4 +1,6 @@
 <div>
     <app-assets></app-assets>
     <app-debts></app-debts>
+    <app-income></app-income>
+    <app-expenditure></app-expenditure>
 </div>
